Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-14552

NULL pointer dereference in ptlrpc_watchdog_fire()

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.15.0
    • None
    • None
    • 3
    • 9223372036854775807

      [ 1848.511135] BUG: unable to handle kernel NULL pointer dereference at 00000000000004a4
      [ 1848.518017] IP: [<ffffffffc0e1da9a>] ptlrpc_watchdog_fire+0xea/0x190 [ptlrpc]
      [ 1848.522406] PGD 0 
      [ 1848.525611] Oops: 0000 [#1] SMP 
      [ 1848.529543] Modules linked in: osp(OE) mdd(OE) lod(OE) mdt(OE) lfsck(OE) mgs(OE) mgc(OE) osd_ldiskfs(OE) ldiskfs(OE) lquota(OE) fid(OE) fld(OE) ksocklnd(OE) ptlrpc(OE) obdclass(OE) lnet(OE) libcfs(OE) crc_t10dif crct10dif_generic crct10dif_common dm_mod rpcsec_gss_krb5 auth_rpcgss nfsv4 dns_resolver nfs lockd grace fscache mlx5_ib(OE) mlx5_core(OE) rpcrdma(OE) xprtrdma(OE) mlxfw ib_isert(OE) ib_iser(OE) ib_srpt(OE) ib_srp(OE) ib_ipoib(OE) rdma_ucm(OE) ib_ucm(OE) ib_uverbs(OE) ib_umad(OE) rdma_cm(OE) ib_cm(OE) iw_cm(OE) mlx4_ib(OE) ib_core(OE) mlx4_en(OE) ptp pps_core mlx4_core(OE) mlx_compat(OE) devlink cirrus ttm drm_kms_helper syscopyarea sysfillrect sysimgblt fb_sys_fops ppdev drm parport_pc sunrpc parport joydev i2c_piix4 drm_panel_orientation_quirks virtio_balloon pcspkr ip_tables ext4 mbcache
      [ 1848.560822]  jbd2 ata_generic pata_acpi virtio_blk ata_piix serio_raw e1000 floppy libata virtio_pci virtio_ring virtio [last unloaded: libcfs]
      [ 1848.567919] CPU: 2 PID: 81 Comm: kworker/2:1 Kdump: loaded Tainted: G           OE  ------------   3.10.0-957.1.3957.1.3.x4.5.46.x86_64 #1
      [ 1848.574031] Hardware name: Red Hat KVM, BIOS 0.5.1 01/01/2011
      [ 1848.577032] Workqueue: events ptlrpc_watchdog_fire [ptlrpc]
      [ 1848.579943] task: ffffa0d2f4f3b0c0 ti: ffffa0d2f4fb8000 task.ti: ffffa0d2f4fb8000
      [ 1848.583121] RIP: 0010:[<ffffffffc0e1da9a>]  [<ffffffffc0e1da9a>] ptlrpc_watchdog_fire+0xea/0x190 [ptlrpc]
      [ 1848.586770] RSP: 0018:ffffa0d2f4fbbdf8  EFLAGS: 00010202
      [ 1848.589558] RAX: 000000000000012c RBX: 0000000000000737 RCX: 0000000100179c00
      [ 1848.592963] RDX: 0000000000000000 RSI: ffffffffc0ee66f8 RDI: ffffffffc0f56cc0
      [ 1848.596295] RBP: ffffa0d2f4fbbe18 R08: 0000000000000737 R09: 0000000000000107
      [ 1848.599485] R10: 7cb3cdf443d7ac38 R11: 00000211c24aefc0 R12: ffffa0d2f4b7ac38
      [ 1848.602665] R13: 0000000000000107 R14: ffffa0d2ffc9fc00 R15: 0000000000000080
      [ 1848.605786] FS:  0000000000000000(0000) GS:ffffa0d2ffc80000(0000) knlGS:0000000000000000
      [ 1848.608991] CS:  0010 DS: 0000 ES: 0000 CR0: 0000000080050033
      [ 1848.611793] CR2: 00000000000004a4 CR3: 0000000019210000 CR4: 00000000000006e0
      [ 1848.614806] Call Trace:
      [ 1848.616988]  [<ffffffff9c8ba09f>] process_one_work+0x17f/0x440
      [ 1848.619731]  [<ffffffff9c8bb136>] worker_thread+0x126/0x3c0
      [ 1848.622352]  [<ffffffff9c8bb010>] ? manage_workers.isra.25+0x2a0/0x2a0
      [ 1848.625292]  [<ffffffff9c8c1f81>] kthread+0xd1/0xe0
      [ 1848.627973]  [<ffffffff9c8c1eb0>] ? insert_kthread_work+0x40/0x40
      [ 1848.630695]  [<ffffffff9cf77c37>] ret_from_fork_nospec_begin+0x21/0x21
      [ 1848.633353]  [<ffffffff9c8c1eb0>] ? insert_kthread_work+0x40/0x40
      [ 1848.636062] Code: 69 92 13 00 b0 6c f5 c0 c7 05 57 92 13 00 00 04 00 02 48 c7 c6 f8 66 ee c0 49 8b 54 24 e8 8b 05 31 7c c4 ff 48 c7 c7 c0 6c f5 c0 <8b> 8a a4 04 00 00 89 04 24 48 81 c2 78 06 00 00 31 c0 e8 bf 57 
      [ 1848.644515] RIP  [<ffffffffc0e1da9a>] ptlrpc_watchdog_fire+0xea/0x190 [ptlrpc]
      

            askulysh Andriy Skulysh
            askulysh Andriy Skulysh
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: